[project]
name = "sentinel-keeper"
version = "0.0.1"
description = "Off-chain keeper bot for Sentinel Vault"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Joonhun Lee <ljoonhun@outlook.com>" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "web3>=7.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.0",
]

[project.scripts]
sentinel-keeper = "sentinel_keeper.main:main"

[project.urls]
Repository = "https://github.com/leejoonhun/sentinel_vault"
Documentation = "https://github.com/leejoonhun/sentinel_vault#readme"

# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_keeper"]

# Ruff (Linter & Formatter)
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["sentinel_keeper"]

# MyPy (Type Checking)
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*"]
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# Coverage
[tool.coverage.run]
source = ["sentinel_keeper"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
